objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TestObjects</relationshipLabel>
        <relationshipName>TestObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>Space2__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>TestField</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>TestObject</label>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>